[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/popups/scraper/ScraperPopup.gd" type="Script" id=1]
[ext_resource path="res://scenes/popups/scraper/Waiting.gd" type="Script" id=2]
[ext_resource path="res://scenes/config/GameMetadataEditor.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/popups/scraper/SystemEntry.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/popups/scraper/Success.gd" type="Script" id=5]
[ext_resource path="res://resources/fonts/default_italic.tres" type="FontFile" id=6]
[ext_resource path="res://scenes/popups/scraper/Working.gd" type="Script" id=7]
[ext_resource path="res://scenes/popups/scraper/Warning.gd" type="Script" id=8]
[ext_resource path="res://scenes/popups/scraper/Error.gd" type="Script" id=9]
[ext_resource path="res://scenes/popups/scraper/StopScraperDialog.gd" type="Script" id=10]
[ext_resource path="res://resources/fonts/default_bold.tres" type="FontFile" id=11]
[ext_resource path="res://assets/icons/success.svg" type="Texture2D" id=12]
[ext_resource path="res://source/utils/ScrollHandler.gd" type="Script" id=13]
[ext_resource path="res://assets/icons/loading.svg" type="Texture2D" id=14]
[ext_resource path="res://assets/icons/warning.svg" type="Texture2D" id=15]
[ext_resource path="res://assets/icons/error.svg" type="Texture2D" id=16]
[ext_resource path="res://scenes/popups/scraper/GameEntries.gd" type="Script" id=17]

[node name="ScraperPopup" type="PopupPanel"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
exclusive = true
script = ExtResource( 1 )
system_entry_scene = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_right = 1016.0
offset_bottom = 24.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
offset_right = 24.0
offset_bottom = 24.0
custom_minimum_size = Vector2( 24, 24 )
focus_mode = 2
texture = ExtResource( 12 )
expand = true
stretch_mode = 6

[node name="ScraperDone" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_left = 28.0
offset_top = 5.0
offset_right = 36.0
offset_bottom = 19.0
text = "0"

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
offset_left = 40.0
offset_right = 64.0
offset_bottom = 24.0
custom_minimum_size = Vector2( 24, 24 )
focus_mode = 2
texture = ExtResource( 15 )
expand = true
stretch_mode = 6

[node name="ScraperWarning" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_left = 68.0
offset_top = 5.0
offset_right = 76.0
offset_bottom = 19.0
focus_mode = 2
text = "0"

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
offset_left = 80.0
offset_right = 104.0
offset_bottom = 24.0
custom_minimum_size = Vector2( 24, 24 )
focus_mode = 2
texture = ExtResource( 16 )
expand = true
stretch_mode = 6

[node name="ScraperError" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_left = 108.0
offset_top = 5.0
offset_right = 116.0
offset_bottom = 19.0
focus_mode = 2
text = "0"

[node name="TextureRect5" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
offset_left = 120.0
offset_right = 144.0
offset_bottom = 24.0
custom_minimum_size = Vector2( 24, 24 )
focus_mode = 2
texture = ExtResource( 14 )
expand = true
stretch_mode = 6

[node name="ScraperPending" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_left = 148.0
offset_top = 5.0
offset_right = 156.0
offset_bottom = 19.0
focus_mode = 2
text = "0"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
offset_left = 160.0
offset_right = 164.0
offset_bottom = 24.0

[node name="ScraperDetails" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_left = 168.0
offset_top = 5.0
offset_right = 1016.0
offset_bottom = 19.0
focus_mode = 2
size_flags_horizontal = 3
clip_text = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
offset_top = 28.0
offset_right = 1016.0
offset_bottom = 32.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 36.0
offset_right = 1016.0
offset_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer2"]
offset_right = 400.0
offset_bottom = 500.0
custom_minimum_size = Vector2( 400, 0 )
follow_focus = true

[node name="GameEntries" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/ScrollContainer"]
unique_name_in_owner = true
offset_right = 400.0
offset_bottom = 500.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 17 )

[node name="ScrollHandler" type="Control" parent="VBoxContainer/HBoxContainer2/ScrollContainer"]
script = ExtResource( 13 )

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer2"]
offset_left = 404.0
offset_right = 408.0
offset_bottom = 500.0

[node name="GameEntryEditor" type="TabContainer" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
offset_left = 412.0
offset_right = 1016.0
offset_bottom = 500.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tabs_visible = false

[node name="Success" type="Control" parent="VBoxContainer/HBoxContainer2/GameEntryEditor"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 8.0
offset_right = -4.0
offset_bottom = -4.0
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Success"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Success/VBoxContainer"]
offset_right = 596.0
offset_bottom = 31.0
text = "Scrape completed. You may confirm the game's metadata below, and edit after finishing scraping."
autowrap = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Success/VBoxContainer"]
offset_top = 35.0
offset_right = 596.0
offset_bottom = 39.0

[node name="Root" type="Control" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Success/VBoxContainer"]
offset_top = 43.0
offset_right = 596.0
offset_bottom = 488.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameMetadataEditor" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Success/VBoxContainer/Root" instance=ExtResource( 3 )]
unique_name_in_owner = true
disable_edits = true

[node name="NoData" type="Label" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Success/VBoxContainer/Root"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
theme_override_fonts/font = ExtResource( 6 )
text = "Metadata was not scraped"
align = 1
valign = 1

[node name="Working" type="Control" parent="VBoxContainer/HBoxContainer2/GameEntryEditor"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 8.0
offset_right = -4.0
offset_bottom = -4.0
script = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Working"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 150.0
offset_bottom = -156.0

[node name="WorkingLabel" type="Label" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Working/VBoxContainer"]
unique_name_in_owner = true
offset_right = 596.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource( 6 )
align = 1
valign = 1
autowrap = true

[node name="WorkingProgress" type="ProgressBar" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Working/VBoxContainer"]
unique_name_in_owner = true
offset_left = 223.0
offset_top = 24.0
offset_right = 373.0
offset_bottom = 38.0
custom_minimum_size = Vector2( 150, 0 )
focus_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
step = 1.0

[node name="WorkingCancelButton" type="Button" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Working/VBoxContainer"]
unique_name_in_owner = true
offset_left = 271.0
offset_top = 162.0
offset_right = 325.0
offset_bottom = 182.0
size_flags_horizontal = 4
text = "Cancel"

[node name="Waiting" type="Control" parent="VBoxContainer/HBoxContainer2/GameEntryEditor"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 8.0
offset_right = -4.0
offset_bottom = -4.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Waiting"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 150.0
offset_bottom = -156.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Waiting" type="Label" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Waiting/VBoxContainer"]
offset_top = 69.0
offset_right = 596.0
offset_bottom = 89.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource( 6 )
text = "Waiting to be downloaded..."
align = 1
valign = 1
autowrap = true

[node name="WaitingCancelButton" type="Button" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Waiting/VBoxContainer"]
unique_name_in_owner = true
offset_left = 271.0
offset_top = 162.0
offset_right = 325.0
offset_bottom = 182.0
size_flags_horizontal = 4
text = "Cancel"

[node name="Warning" type="Control" parent="VBoxContainer/HBoxContainer2/GameEntryEditor"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 8.0
offset_right = -4.0
offset_bottom = -4.0
script = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NoGamesLabel" type="Label" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer"]
unique_name_in_owner = true
offset_right = 596.0
offset_bottom = 31.0
text = "This game could not be uniquely identified by the scraper. Indicate a search term to search for (use simple words and avoid special characters)."
autowrap = true

[node name="MultipleGamesLabel" type="Label" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer"]
unique_name_in_owner = true
offset_top = 35.0
offset_right = 596.0
offset_bottom = 66.0
focus_mode = 2
text = "This game could not be uniquely identified by the scraper. Select the correct entry below, or indicate a different search term (use simple words and avoid special characters)."
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer"]
offset_top = 70.0
offset_right = 596.0
offset_bottom = 94.0

[node name="SearchField" type="LineEdit" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_right = 538.0
offset_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Search term, such as game's title, franchise, etc..."

[node name="Search" type="Button" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_left = 542.0
offset_right = 596.0
offset_bottom = 24.0
disabled = true
text = "Search"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer"]
offset_top = 98.0
offset_right = 596.0
offset_bottom = 488.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer2"]
offset_right = 384.0
offset_bottom = 390.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer2/ScrollContainer"]
offset_right = 384.0
offset_bottom = 515.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer2/ScrollContainer/VBoxContainer"]
offset_right = 372.0
offset_bottom = 122.0
size_flags_horizontal = 3

[node name="Screenshot" type="TextureRect" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_right = 260.0
offset_bottom = 122.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer"]
offset_left = 264.0
offset_right = 372.0
offset_bottom = 122.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
offset_right = 108.0
offset_bottom = 20.0
custom_minimum_size = Vector2( 108, 0 )
focus_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( 11 )
text = "Developer:"
autowrap = true

[node name="Developer" type="Label" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 24.0
offset_right = 108.0
offset_bottom = 38.0
focus_mode = 2
size_flags_horizontal = 3
autowrap = true

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
offset_top = 42.0
offset_right = 108.0
offset_bottom = 62.0
custom_minimum_size = Vector2( 108, 0 )
focus_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( 11 )
text = "Publisher:"
autowrap = true

[node name="Publisher" type="Label" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 66.0
offset_right = 108.0
offset_bottom = 80.0
focus_mode = 2
size_flags_horizontal = 3
autowrap = true

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
offset_top = 84.0
offset_right = 108.0
offset_bottom = 104.0
focus_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( 11 )
text = "Num players:"
autowrap = true

[node name="NumPlayers" type="Label" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer2/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 108.0
offset_right = 108.0
offset_bottom = 122.0
focus_mode = 2
size_flags_horizontal = 3
autowrap = true

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer2/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 126.0
offset_right = 372.0
offset_bottom = 146.0
focus_mode = 2
theme_override_fonts/font = ExtResource( 11 )
text = "Game name"
autowrap = true

[node name="Description" type="Label" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer2/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 150.0
offset_right = 372.0
offset_bottom = 515.0
focus_mode = 2
theme_override_fonts/font = ExtResource( 6 )
text = "Game description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec quam nec ex tristique finibus. Pellentesque aliquet purus at aliquet sagittis. Donec vestibulum dui eros, ut gravida mauris euismod lacinia. Quisque pulvinar luctus sem, eu malesuada mi feugiat eget. Vivamus sit amet diam semper, rhoncus augue quis, volutpat felis. Ut augue justo, faucibus sed ligula a, tincidunt posuere quam. Proin aliquam mi vel lectus semper, id lacinia lorem rhoncus. Duis et sagittis turpis. Cras id augue nec lacus faucibus volutpat ultricies luctus lacus. Proin lobortis ornare nisl id tristique. Aliquam quis venenatis nibh. Aenean et imperdiet ante. Nunc libero diam, rutrum non arcu id, euismod ornare felis. Quisque fringilla massa massa, nec ullamcorper neque laoreet id. Nam commodo diam vitae rutrum molestie. "
autowrap = true

[node name="HSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer2"]
offset_left = 388.0
offset_right = 392.0
offset_bottom = 390.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer2"]
offset_left = 396.0
offset_right = 596.0
offset_bottom = 390.0

[node name="ScrollContainer2" type="ScrollContainer" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer2/VBoxContainer"]
offset_right = 200.0
offset_bottom = 358.0
custom_minimum_size = Vector2( 200, 0 )
size_flags_vertical = 3
follow_focus = true

[node name="GameSearchEntries" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2"]
unique_name_in_owner = true
offset_right = 200.0
offset_bottom = 358.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollHandler" type="Control" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer2"]
script = ExtResource( 13 )

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer2/VBoxContainer"]
offset_top = 362.0
offset_right = 200.0
offset_bottom = 366.0

[node name="Confirm" type="Button" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
offset_top = 370.0
offset_right = 200.0
offset_bottom = 390.0
disabled = true
text = "Confirm"

[node name="Error" type="Control" parent="VBoxContainer/HBoxContainer2/GameEntryEditor"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 8.0
offset_right = -4.0
offset_bottom = -4.0
script = ExtResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Error"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 41.0
offset_bottom = -68.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Error/VBoxContainer"]
offset_right = 596.0
offset_bottom = 355.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ErrorLabel" type="Label" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Error/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
offset_right = 596.0
offset_bottom = 355.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "There was an error when downloading information for
\"%s\":

%s"
align = 1
valign = 1
autowrap = true

[node name="ScrollHandler" type="Control" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Error/VBoxContainer/ScrollContainer"]
script = ExtResource( 13 )

[node name="ErrorRetryButton" type="Button" parent="VBoxContainer/HBoxContainer2/GameEntryEditor/Error/VBoxContainer"]
unique_name_in_owner = true
offset_left = 275.0
offset_top = 359.0
offset_right = 320.0
offset_bottom = 379.0
size_flags_horizontal = 6
size_flags_vertical = 0
text = "Retry"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
offset_top = 540.0
offset_right = 1016.0
offset_bottom = 544.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 548.0
offset_right = 1016.0
offset_bottom = 568.0
theme_override_constants/separation = 10

[node name="PendingGames" type="Label" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
offset_top = 3.0
offset_right = 956.0
offset_bottom = 17.0
focus_mode = 2
size_flags_horizontal = 11
align = 2

[node name="Finish" type="Button" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
offset_left = 966.0
offset_right = 1016.0
offset_bottom = 20.0
text = "Finish"

[node name="StopScraperDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -508.0
offset_top = -284.0
offset_right = 508.0
offset_bottom = 284.0
focus_mode = 2
script = ExtResource( 10 )

[node name="StopDescription" type="Label" parent="StopScraperDialog"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -36.0
text = "There are still %d games waiting to be scraped.

If you cancel now, the existing metadata/media will still be saved, so some games
might show incomplete information.

Are you sure you wish to stop the scraping process?"
align = 1
valign = 1

[connection signal="focus_entered" from="VBoxContainer/HBoxContainer2/ScrollContainer/GameEntries" to="VBoxContainer/HBoxContainer2/ScrollContainer/GameEntries" method="_on_GameEntries_focus_entered"]
[connection signal="cancel_entry" from="VBoxContainer/HBoxContainer2/GameEntryEditor/Working" to="." method="_on_Working_cancel_entry"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/GameEntryEditor/Working/VBoxContainer/WorkingCancelButton" to="VBoxContainer/HBoxContainer2/GameEntryEditor/Working" method="_on_WorkingCancelButton_pressed"]
[connection signal="cancel_entry" from="VBoxContainer/HBoxContainer2/GameEntryEditor/Waiting" to="." method="_on_Waiting_cancel_entry"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/GameEntryEditor/Waiting/VBoxContainer/WaitingCancelButton" to="VBoxContainer/HBoxContainer2/GameEntryEditor/Waiting" method="_on_WaitingCancelButton_pressed"]
[connection signal="request_search" from="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning" to="." method="_on_Warning_request_search"]
[connection signal="search_completed" from="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning" to="." method="_on_Warning_search_completed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer/SearchField" to="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning" method="_on_SearchField_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer/SearchField" to="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning" method="_on_SearchField_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer/Search" to="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning" method="_on_Search_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning/VBoxContainer/HBoxContainer2/VBoxContainer/Confirm" to="VBoxContainer/HBoxContainer2/GameEntryEditor/Warning" method="_on_Confirm_pressed"]
[connection signal="retry_entry" from="VBoxContainer/HBoxContainer2/GameEntryEditor/Error" to="." method="_on_Error_retry_entry"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/GameEntryEditor/Error/VBoxContainer/ErrorRetryButton" to="VBoxContainer/HBoxContainer2/GameEntryEditor/Error" method="_on_ErrorRetryButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Finish" to="." method="_on_Finish_pressed"]
[connection signal="confirmed" from="StopScraperDialog" to="." method="_on_StopScraperDialog_confirmed"]
